# clocked

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  SELF-HOSTING.md  build-installer.ps1  build.rs  deploy.ps1  install.ps1  uninstall.ps1
.ai/: todo.md
.github/workflows/: ci.yml  release.yml
assets/: gen_amber_favicon.py  gen_favicon.py  gen_icon.py
extension/chrome/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/store/: LISTING.md  pack.ps1
installer/: clocked.iss
marketing/: AGENT.md  LAUNCH_KIT.md
packaging/macos/: Info.plist  build-app.sh  entitlements.plist
self-hosted-worker/: package.json  schema.sql  wrangler.jsonc.example
self-hosted-worker/src/: index.ts
src/: activity.rs  autostart.rs  bridge.rs  config.rs  context.rs  db.rs  engine.rs  events.rs  foreground.rs  idle.rs  keepalive.rs  log.rs  main.rs  media.rs  paths.rs  privacy.rs  rules.rs  secret.rs  settings.rs  sync.rs  tray.rs  update.rs  window.rs
src/macos/: mod.rs  runloop.rs
worker/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
worker/migrations/: 0001_init.sql  0002_dashboard.sql  0003_accounts.sql  0004_send_day.sql  0005_organizations.sql  0006_org_settings.sql  0007_billing.sql  0008_token_hash.sql  0009_rate_limit.sql  0010_session_deletions.sql  0011_marketing_agent.sql  0012_activity.sql
worker/src/: activity.ts  auth-server.ts  auth.ts  billing.ts  calendar-days.ts  dashboard.ts  desktop-auth.ts  download.ts  email.ts  favicon.ts  index.ts  ingest.ts  marketing-agent.ts  marketing-pages.ts  og.ts  plans.ts  rate-limit.ts  report.ts  security.ts  settings.ts  time.ts  tokens.ts  types.ts
worker/test/: auth.test.mjs  calendar-days.test.mjs  download.test.mjs  security.test.mjs
