[package]
name = "clocked"
version = "0.1.1"
edition = "2021"
description = "Automatic Windows time tracker driven by power/session events"
license = "MIT"

[[bin]]
name = "clocked"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
] }
winreg      = "0.52"
rusqlite    = { version = "0.32", features = ["bundled", "chrono"] }
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
toml        = "0.8"
directories = "5"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
